src/styles/Index.css
html{
    scroll-behavior: smooth;
}

.mainDiv{
    display: grid;
    background-color: #0d1b2a;
    margin: 0%;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 80px 0.8fr 1fr 0.5fr 0.3fr;
    gap: 15px;
}

.NavBar{
    grid-column-start: 1;
    grid-column-end: 5;
}

.pDiv{
    color: rgb(224, 224, 224);
    text-align: start;
    grid-column-start: 2;
    grid-column-end: 3;
}

.pHead{
    color: white;
    font-size: 55px;
}

.pBody{
    color: rgb(163, 177, 177);
    font-size: 20px;
}

.projectsDiv{
    grid-row-start: 3;
    grid-row-end: 4;
    grid-column-start: 1;
    grid-column-end: 4;

    display: grid;
    grid-template-rows: 100px 1fr 1fr;
    grid-template-columns: 1fr 1fr;
    gap: 60px;
    margin-left: auto;
    margin-right: auto;
}

.projectsH1{
    text-align: start;
    font-size: 40px;
    color: white;
    grid-row-start: 1;
    grid-row-end: 2;
}

.projectsComp{
    margin-top: 60px;
    width: 400px;
    border-radius: 15px;
    grid-row-start: 2;
    grid-row-end: 3;
    color: white;
    box-shadow: 0px 0px 11px -2px rgba(255,255,255,0.7);
    -webkit-box-shadow: 0px 0px 11px -2px rgba(255,255,255,0.7);
    -moz-box-shadow: 0px 0px 11px -2px rgba(255,255,255,0.7);
    transition: 200ms;
}

.projectsComp:hover{
    transform: scale(1.1);
}

.yuvalPoto{
    height: 250px;
    width: 250px;
    border-radius: 50%;
}

.img{
    height: 200px;
    width: 400px;
    border-radius: 15px;
    
}

.projectsCom1{
    width: 400px;
    border-radius: 15px;
    grid-row-start: 3;
    grid-row-end: 4;
    color: white;
    box-shadow: 0px 0px 11px -2px rgba(255,255,255,0.7);
    -webkit-box-shadow: 0px 0px 11px -2px rgba(255,255,255,0.7);
    -moz-box-shadow: 0px 0px 11px -2px rgba(255,255,255,0.7);
    transition: 200ms;
}

.projectsCom1:hover{
    transform: scale(1.1);
}

.skiles{
    grid-row-start: 4;
    grid-row-end: 5;
    grid-column-start: 1;
    grid-column-end: 4;

    display: grid;
    grid-template-rows: 60px 100px 1fr 60px 100px 1fr;
    grid-template-columns: 1fr 1fr 1fr;
    gap: 40px;
    /* margin-left: 400px; */
    margin-left: auto;
    margin-right: auto;
}

.sH1Div{
    grid-row-start: 2;
    grid-row-end: 3;
    grid-column-start: 1;
    grid-column-end: 4;
}

.sH1{
    margin: 0px;
    text-align: start;
    font-size: 40px;
    color: white;
}

.icons{
    padding-left: 15px;
    font-size: 35px;
    color: white;
}

.frontSkill{
    margin-left: auto;
    margin-right: auto;

    grid-row-start: 3; 
    grid-row-end: 4;
    grid-column-start: 1;
    grid-column-end: 2;
    color: white;
    text-align: start;
}

.backSkill{
    margin-left: auto;
    margin-right: auto;

    grid-row-start: 3; 
    grid-row-end: 4;
    grid-column-start: 2;
    grid-column-end: 3;
    color: white;
    text-align: start;
}

.DBSkill{
    margin-left: auto;
    margin-right: auto;

    grid-row-start: 3; 
    grid-row-end: 4;
    grid-column-start: 3;
    grid-column-end: 4;
    color: white;
    text-align: start;
}

.links{
    height: 30px;
    width: 80px;
    border-radius: 15px;
    text-decoration: none;
    background-color: #72efdd;
    color: white;
}

.table{
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 15px;
    border-radius: 15px;
    background-color: #48bfe3;
    height: 35px;
    width: 160px;
}

.a{
    font-size: 16px;
    text-align: center;
    color: white;
    text-decoration: none;
}

.contactH{
    grid-row-start: 5;
    grid-row-end: 6;
    
    color: white;
    text-align: start;
}

.contactB{
    grid-row-start: 6;
    grid-row-end: 7;

    color: white;
    text-align: start;
}

.CV{
    text-align: center;
    float: left;
}

@media ( max-width : 1024px ){
    .mainDiv{
        display: grid;
        display: flex;
        flex-direction: column;
        background-color: #0d1b2a;
        margin: 0%;
        grid-template-columns: 1fr;
        grid-template-rows: 8rem 8rem 0.8fr 0.5fr 0.3fr;
        gap: 15px;
    }

    .yuvalPoto{
        height: 8rem;
        width: 8rem;
        border-radius: 50%;
    }

    .pDiv{
        color: rgb(224, 224, 224);
        text-align: start;
        grid-column-start: 1;
        grid-column-end: 2;
        grid-row-start: 3;
        grid-row-end: 4;
        padding: 10%;
    }

    .projectsDiv{
        grid-row-start: 4;
        grid-row-end: 5;
        grid-column-start: 1;
        grid-column-end: 4;
    
        display: flex;
        flex-direction: column;
        gap: 1rem;
        margin-left: auto;
        margin-right: auto;
    }

    .img{
        width: 100%;
        height: 50%;
        border-radius: 15px;
    }

    .projectsComp{
        display: flex;
        flex-direction: column;
        margin-top: 60px;
        margin-right: auto;
        margin-left: auto;
        width: 70%;
        border-radius: 15px;
        color: white;
        box-shadow: 0px 0px 11px -2px rgba(255,255,255,0.7);
        -webkit-box-shadow: 0px 0px 11px -2px rgba(255,255,255,0.7);
        -moz-box-shadow: 0px 0px 11px -2px rgba(255,255,255,0.7);
        transition: 200ms;
    }

    .projectsCom1{
        display: flex;
        flex-direction: column;
        margin-left: auto;
        margin-right: auto;
        margin-top: 60px;
        width: 70%;
        border-radius: 15px;
        color: white;
        box-shadow: 0px 0px 11px -2px rgba(255,255,255,0.7);
        -webkit-box-shadow: 0px 0px 11px -2px rgba(255,255,255,0.7);
        -moz-box-shadow: 0px 0px 11px -2px rgba(255,255,255,0.7);
        transition: 200ms;
    }

    .skiles{
        margin-top: 60px;
    
        display: flex;
        flex-direction: column;
        justify-content: center;
        margin-left: auto;
        margin-right: auto;
    }

    .contactH{
        margin-left: auto;
        margin-right: auto;
    }

    .sH1{
        text-align: center;
        margin-left: auto;
        margin-right: auto;
    }

    .frontSkill{
        text-align: center;
    }

    .backSkill{
        text-align: center;
    }

    .DBSkill{
        text-align: center;
    }
    
    .contactB{
        display: flex;
        flex-direction: column;
        align-items: center;
        text-align: center;
        margin-left: auto;
        margin-right: auto;
    }

    .projectsH1{
        text-align: center;
    }
}

